# Dex_Hub

./: AI_HANDOFF.md
.github/: copilot-instructions.md
Documents/: DexHub_bible.md
client/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
client/src/: App.test.tsx  App.tsx  index.css  test-setup.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: db.rs  main.rs  signer.rs
client/src/components/: Card.tsx  Header.tsx  MicrophoneButton.tsx  ServerCard.test.tsx  ServerCard.tsx  ServersView.test.tsx  ServersView.tsx  Sidebar.test.tsx  Sidebar.tsx
client/src/lib/: api.ts  servers.test.ts  servers.ts
config/: dexhub_config.json
portal/: app.js  index.html  styles.css
server/: dexhub_server.py  requirements.txt
