[package]
name = "dexhub-shell"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-positioner = { version = "2.0.0", features = ["tray-icon"] }
walkdir = "2"
image = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
